[package]
name = "visualize-api"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1.35", features = ["full"] }
dotenv = "0.15"
serde_json = "1.0"
rocket = "0.5"
serde = { version = "1.0.195", features = ["derive"] }
chrono = { version = "0.4" }
rocket_cors = "0.6.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
